tests/rosetta/out/Pascal/call-a-function-4.error
fpc: exit status 1
Free Pascal Compiler version 3.2.2+dfsg-32 [2024/01/05] for x86_64
Copyright (c) 1993-2021 by Florian Klaempfl and others
Target OS: Linux for x86-64
Compiling /tmp/call-a-function-4.pas
call-a-function-4.pas(10,23) Fatal: Syntax error, "identifier" expected but ":" found
Fatal: Compilation aborted
Error: /usr/bin/ppcx64 returned an error exitcode
