tests/rosetta/out/Pascal/call-a-function-4.pas
// Generated by Mochi compiler v0.10.26 on 2025-07-16T11:36:18Z
program CallAFunction4;
{$mode objfpc}
{$modeswitch nestedprocvars}
uses SysUtils, fgl, fphttpclient, Classes, Variants, fpjson, jsonparser, fpjsonrtti;

type
  generic TArray<T> = array of T;

function gifEncode(out: any; img: any; opts: specialize TFPGMap<string, integer>): integer;
begin
end;

function main(): integer;
var
  _tmp0: specialize TFPGMap<string, integer>;
  opts: specialize TFPGMap<string, integer>;
begin
  _tmp0 := specialize TFPGMap<string, integer>.Create;
  opts := _tmp0;
  opts['NumColors'] := 16;
  gifEncode(Null, Null, opts);
end;

begin
  main();
end.
